--- a/gke-2/cluster.yaml
+++ b/gke-2/cluster.yaml
@@ -8,6 +8,7 @@ metadata: # kpt-merge: config-control/example
     internal.kpt.dev/upstream-identifier: 'container.cnrm.cloud.google.com|ContainerCluster|config-control|example'
   labels:
     location: us-west1
+    env: staging
 spec:
   description: gke-2
   enableAutopilot: true
