added mecho rollout

--- a/stores-rollout-mecho-app.yaml
+++ b/stores-rollout-mecho-app.yaml
@@ -1,27 +1,28 @@
 apiVersion: gitops.kpt.dev/v1alpha1
 kind: Rollout
 metadata:
-  name: stores-namespace-rollout
+  name: stores-mecho-app-rollout
 spec:
-  description: Rollout namespaces to all the stores
+  description: Rollout kecho app to all the stores
   packages:
     sourceType: GitHub
     github:
       selector:
         org: droot
-        repo: store
-        directory: namespaces
-        revision: v3
+        repo: "store-*"
+        directory: echo
+        revision: v1
   targets:
     selector:
       matchExpressions:
         - {key: location/state, operator: In, values: [GA, NY, CA]}
   packageToTargetMatcher:
-    type: AllClusters
+    type: Custom
+    matchExpression: rolloutPackage.repo == cluster.name
   strategy:
     type: Progressive
     progressive:
       namespace: default
       name: stores-rollout-strategy
       pauseAfterWave:
-        waveName: CA-stores
+        waveName: GA-stores
