--- a/cert-manager-rollout.yaml
+++ b/cert-manager-rollout.yaml
@@ -4,6 +4,8 @@ metadata:
   name: cert-manager-rollout
 spec:
   description: rollout cert manager cluster component 
+  clusters:
+    sourceType: KCC
   packages:
     sourceType: GitHub
     github:
